--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="React App for Max G a fullstack Javascrip Develper"
-      content="React Portfolio App"
+      name="MaxG React Portfolio App"
+      content="Portfolio for Max Garry a fullstack Javascript Develper"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:400,300,700,900' type='text/css'>
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
