Modified nav usinf flexbox and added Google Tomorrow font as default globally

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="MaxG React Portfolio App"
       content="Portfolio for Max Garry a fullstack Javascript Develper"
     />
+    <link href="https://fonts.googleapis.com/css?family=Tomorrow:400,500,700,800,900&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:400,300,700,900' type='text/css'>
     <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
     <!--
